raiden/tests/ui/gsi_key_conditions/auto_projection_sort_key_before_partition.stderr
error[E0277]: the trait bound `KeyConditionFilledOrWaitOperator<UserUserIndexSort1KeyConditionToken, UserUserIndexSort2KeyConditionToken>: raiden::KeyConditionBuilder<UserUserIndexPartitionKeyConditionToken, _>` is not satisfied
  --> tests/ui/gsi_key_conditions/auto_projection_sort_key_before_partition.rs:30:55
   |
30 |     let _ = client.query().user_index().key_condition(cond);
   |                                         ------------- ^^^^ unsatisfied trait bound
   |                                         |
   |                                         required by a bound introduced by this call
   |
help: the trait `KeyConditionBuilder<UserUserIndexPartitionKeyConditionToken, _>` is not implemented for `KeyConditionFilledOrWaitOperator<UserUserIndexSort1KeyConditionToken, UserUserIndexSort2KeyConditionToken>`
      but trait `KeyConditionBuilder<UserUserIndexSort1KeyConditionToken, UserUserIndexSort2KeyConditionToken>` is implemented for it
  --> src/key_condition/mod.rs
   |
   | impl<T, U> KeyConditionBuilder<T, U> for KeyConditionFilledOrWaitOperator<T, U> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `UserUserIndexSort1KeyConditionToken`, found `UserUserIndexPartitionKeyConditionToken`
note: required by a bound in `UserQueryBuilder::<'a, T>::key_condition`
  --> tests/ui/gsi_key_conditions/auto_projection_sort_key_before_partition.rs:3:10
   |
 3 | #[derive(Raiden)]
   |          ^^^^^^ required by this bound in `UserQueryBuilder::<'a, T>::key_condition`
   = note: this error originates in the derive macro `Raiden` (in Nightly builds, run with -Z macro-backtrace for more info)
